# cli-3d-object-viewer

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/files/: extract_extension.rs  get_file_size.rs  mod.rs  validate_file.rs
src/loaders/: mod.rs  obj_loader.rs  object_loader.rs
src/models/: cli_arguments.rs  generic_3d_object.rs  mod.rs  object_metadata.rs  object_viewer_action.rs  supported_file_extensions.rs
src/utils/: log.rs  mod.rs
